# cronos

./: Cargo.toml
assets/systemd/: cronos.service
config/: cronos.default.toml
crates/collectors/cronos-collect-appmon/: Cargo.toml
crates/collectors/cronos-collect-appmon/src/: main.rs
crates/collectors/cronos-collect-fs/: Cargo.toml
crates/collectors/cronos-collect-fs/src/: main.rs
crates/cronos/: Cargo.toml
crates/cronos-chat/: Cargo.toml
crates/cronos-chat/src/: autostart.rs  credentials.rs  lib.rs  oauth.rs  tools.rs
crates/cronos-common/: Cargo.toml
crates/cronos-common/src/: config.rs  consent.rs  error.rs  lib.rs  paths.rs
crates/cronos-core/: Cargo.toml
crates/cronos-core/src/: aggregator.rs  engine.rs  lib.rs
crates/cronos-core/src/graph/: mod.rs
crates/cronos-core/src/ingest/: mod.rs
crates/cronos-core/src/linker/: mod.rs
crates/cronos-core/src/server/: mod.rs
crates/cronos-core/src/storage/: migrations.rs  mod.rs  repo.rs
crates/cronos-core/tests/: integration_test.rs
crates/cronos-model/: Cargo.toml
crates/cronos-model/src/: lib.rs
crates/cronos-proto/: Cargo.toml
crates/cronos-proto/src/: frame.rs  lib.rs  message.rs
crates/cronos-ui/: Cargo.toml  tauri.conf.json
crates/cronos-ui/frontend/: app.js  index.html  style.css
crates/cronos-ui/src/: main.rs
crates/cronos/src/: main.rs
crates/cronos/src/chat/: autostart.rs  credentials.rs  daemon_client.rs  mod.rs  oauth.rs  openai.rs  repl.rs  tools.rs
docs/plans/: 2026-02-21-cronos-architecture-design.md  2026-02-21-cronos-implementation-plan.md
