[workspace]
resolver = "2"
members = [
    "crates/cronos-model",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1.2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
toml = "1.0"
rusqlite = { version = "0.38", features = ["bundled"] }
petgraph = "0.8"
notify = "8.2"
directories = "6.0"
libc = "0.2"
glob-match = "0.2"
