[package]
name = "cronos-chat"
version.workspace = true
edition.workspace = true

[dependencies]
cronos-model = { path = "../cronos-model" }
cronos-common = { path = "../cronos-common" }
cronos-proto = { path = "../cronos-proto" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
open = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
urlencoding = { workspace = true }
rand = { workspace = true }
