[package]
name = "cronos-core"
version.workspace = true
edition.workspace = true

[dependencies]
cronos-model = { path = "../cronos-model" }
cronos-proto = { path = "../cronos-proto" }
cronos-common = { path = "../cronos-common" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
petgraph = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tempfile = "3"
