[package]
name = "cronos-proto"
version.workspace = true
edition.workspace = true

[dependencies]
cronos-model = { path = "../cronos-model" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
