[package]
name = "cronos"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cronos"
path = "src/main.rs"

[dependencies]
cronos-core = { path = "../cronos-core" }
cronos-common = { path = "../cronos-common" }
cronos-model = { path = "../cronos-model" }
cronos-proto = { path = "../cronos-proto" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
rustyline = { workspace = true }
futures-util = { workspace = true }
open = { workspace = true }
sha2 = { workspace = true }
