[package]
name = "cronos"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cronos"
path = "src/main.rs"

[dependencies]
cronos-core = { path = "../cronos-core" }
cronos-common = { path = "../cronos-common" }
cronos-chat = { path = "../cronos-chat" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
futures-util = { workspace = true }
