[package]
name = "cronos-collect-appmon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cronos-collect-appmon"

[dependencies]
cronos-model = { path = "../../cronos-model" }
cronos-common = { path = "../../cronos-common" }
cronos-proto = { path = "../../cronos-proto" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
