[package]
name = "cronos-collect-fs"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cronos-collect-fs"
path = "src/main.rs"

[dependencies]
cronos-model = { path = "../../cronos-model" }
cronos-proto = { path = "../../cronos-proto" }
cronos-common = { path = "../../cronos-common" }
tokio = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
glob-match = { workspace = true }
